--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -2,34 +2,18 @@
   max-width: 1200px;
   margin: 20px auto;
   padding-left: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-::ng-deep {
-  .mat-form-field-infix {
-    background-color: #3f51b5;
-  }
-
-  .mat-select-value,
-  .mat-select-arrow,
-  .mat-form-field-hide-placeholder .mat-select-placeholder,
-  .mat-form-field-appearance-legacy .mat-form-field-label {
-    color: #fff !important;
-    opacity: 1;
-  }
-
-  .mat-form-field-infix {
-    border-color: #fff !important;
-    border-top: none;
-    padding-left: 5px !important;
-  }
-
-  .mat-form-field-appearance-legacy .mat-form-field-label {
-    padding-left: 5px;
-  }
-
-  .mat-form-field-appearance-legacy .mat-form-field-underline {
-    background-color: #fff !important;
-  }
+.sort {
+  width: 35%;
+  height: 60px;
+  border-radius: 5px;
+  background-color: #ffffff;
+  padding: 10px;
+  margin-bottom: 10px;
 }
 
 .games {
