--- a/src/app/search-bar/search-bar.component.scss
+++ b/src/app/search-bar/search-bar.component.scss
@@ -9,24 +9,23 @@
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 7;
+    z-index: 1;
   }
 
   &-form {
     width: 100%;
-    // max-width: 1200px;
     margin: 0 auto;
+    display: flex;
+    justify-content: center;
   }
 
   &-input {
-    margin-left: 50px;
     padding: 10px;
     width: 60%;
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
     outline: none;
     border: none;
-    flex: 2;
   }
 
   &-button {
@@ -51,29 +50,49 @@
 }
 
 .logo {
-  margin-left: 50px;
   color: #fff;
   font-weight: 700;
-  cursor: pointer;
   font-size: 20px;
   text-decoration: none;
-  flex: 1;
 }
 
-.right-headers {
+.left {
+  flex: 1.5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  &-icon {
+    width: 55px;
+    margin-right: 5px;
+  }
+}
+
+.center {
+  flex: 8;
+}
+
+.right {
+  flex: 1;
   display: flex;
   justify-content: space-between;
-  flex: 3;
-  padding: 10px;
-  margin-right: 30px;
 }
 
-.icon-image {
+.icon {
   width: 45px;
   height: 45px;
   background-color: #fff;
-  margin-right: 20px;
   border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  margin-right: 10px;
+}
+
+.image {
+  width: 30px;
+  height: 30px;
 }
 
 .username {
