--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,11 @@
 <div class="filters">
   <mat-form-field class="sort">
     <mat-label class="sort-tilte">Sort</mat-label>
-    <mat-select panelClass="sort-select">
+    <mat-select
+      panelClass="sort-select"
+      [(ngModel)]="sort"
+      (selectionChange)="searchGames(sort)"
+    >
       <mat-option value="name">Name</mat-option>
       <mat-option value="-released">Released</mat-option>
       <mat-option value="-added">Added</mat-option>
@@ -14,16 +18,31 @@
 </div>
 
 <div class="games">
-  <ng-container>
-    <div class="game">
+  <ng-container *ngFor="let game of games">
+    <div class="game" (click)="openGameDetails(game.id)">
       <div class="game-thumb-container">
-        <img />
-        <p>No Image</p>
+        <img
+          *ngIf="game.background_image"
+          class="game-thumbnail"
+          src="{{ game.background_image }}"
+          alt=""
+        />
+        <img
+          *ngIf="!game.background_image"
+          class="game-thumbnail"
+          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTiQc9dZn33Wnk-j0sXZ19f8NiMZpJys7nTlA&usqp=CAU"
+          alt=""
+        />
       </div>
       <div class="game-description">
-        <p class="game-name">Lien Minh Huyen Thoai</p>
+        <p class="game-name">{{ game.name }}</p>
         <div class="game-platforms">
-            <img class="game-platform" />
+          <img
+            *ngFor="let gamePlatform of game.parent_platforms"
+            class="game-platform"
+            src="../../assets/images/{{ gamePlatform.platform.slug }}.svg"
+            alt="{{ gamePlatform.platform.slug }}"
+          />
         </div>
       </div>
     </div>
